--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,11 +9,12 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Capacitor share sheet extensions example # 1</ion-title>
+      <ion-title size="large">Capacitor share sheet extensions example # 4</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <div id="container">
-    <rd-categories></rd-categories>
+    <rd-ios-categories *ngIf="ios"></rd-ios-categories>
+    <rd-android-categories *ngIf="android"></rd-android-categories>
   </div>
 </ion-content>
